--- a/Androidteam/res/values/strings.xml
+++ b/Androidteam/res/values/strings.xml
@@ -76,5 +76,9 @@
 	<string name="wo_shi_xue_sheng">我是学生</string>
 	<string name="wo_shi_jiao_shi">我是教师</string>
 	<string name="zhu_ce">注册</string>
-
+	<string name="ti_xing">提醒</string>
+	<string name="qing_shu_ru_yong_hu_ming">请输入用户名</string>
+	<string name="qing_shu_ru_mi_ma">请输入密码</string>
+	<string name="qing_xuan_ze_lei_xing">请选择类型</string>
+	<string name="qing_tian_xie_xin_xi">请填写信息</string>
 </resources>
