--- a/Androidteam/res/values/strings.xml
+++ b/Androidteam/res/values/strings.xml
@@ -4,8 +4,6 @@
     
     <string name="network_unused">请检查网络</string>
     
-    <string name="que_ding">确定</string>
-    
     <!-- 主activity -->
     <string name="gou_wu">购物</string>
     <string name="ding_dan">订单</string>
@@ -59,9 +57,6 @@
 	<string name="wo_de_quan_zi">我的圈子</string>
 	<string name="she_zhi">个人设置</string>
 	<string name="liu_lan_li_shi">浏览历史</string>
-	<!-- 登录 -->
-	<string name="wei_deng_lu">未登录</string>
-	<string name="dian_ji_deng_lu">点击登录</string>
 	
 	<string name="ping_lun">评论</string>
 	
@@ -81,4 +76,17 @@
 	<string name="qing_shu_ru_mi_ma">请输入密码</string>
 	<string name="qing_xuan_ze_lei_xing">请选择类型</string>
 	<string name="qing_tian_xie_xin_xi">请填写信息</string>
+	<string name="zhu_ce_cheng_gong">注册成功</string>
+	<string name="que_ding">确定</string>
+	<!-- 登录 -->
+	<string name="deng_lu">登录</string>
+	<string name="deng_lu_cheng_gong">登录成功</string>
+	<!-- 返回错误相关 -->
+	<string name="xi_tong_yi_chang">系统异常</string>
+	<string name="yong_hu_ming_chong_fu">用户名重复</string>
+	<string name="yong_hu_ming_bu_he_fa">用户名不合法</string>
+	<string name="mi_ma_bu_he_fa">密码不合法</string>
+	<string name="wei_zhi_cuo_wu">未知错误</string>
+	<string name="yong_hu_bu_cun_zai">用户不存在</string>
+	<string name="mi_ma_cuo_wu">密码错误</string>
 </resources>
