--- a/Androidteam/res/values/strings.xml
+++ b/Androidteam/res/values/strings.xml
@@ -14,11 +14,20 @@
     <string name="ce_shi">测试</string>
 
     <!-- 学生信息查询页-->
-    <string name="xing_ming">姓名</string>
+    <string name="xue_sheng">学生</string>
     <string name="xue_yuan">学院</string>
     <string name="nian_ji">年级</string>
     <string name="cha_xun">查询</string>
+    <string name="yao_qing">邀请</string>
     <string name="zhi">-</string>
+    <!-- 教师信息查询页 -->
+    <string name="jiao_shi">教师</string>
+    <string name="ren_jiao_shi_jian">任教时间</string>
+    <!-- 竞赛信息查询页 -->
+    <string name="zu_dui">组队</string>
+    <string name="jing_sai">竞赛</string>
+    <string name="kai_shi_shi_jian">开始时间</string>
+    <string name="jie_shu_shi_jian">结束时间</string>
     <!-- 商品详情页 -->
     <string name="fa_bu_ren">发布人：</string>
     <string name="fa_bu_ri_qi">发布日期：</string>
