--- a/Androidteam/res/values/strings.xml
+++ b/Androidteam/res/values/strings.xml
@@ -144,4 +144,7 @@
 	<string name="jing_sai_xiang_qing">竞赛详情</string>
 	<string name="chuang_jian_dui_wu">创建队伍</string>
 	<string name="tuan_dui_xiang_qing">团队详情</string>
+	
+	<!-- 团队相关操作 -->
+	<string name="shen_qing_jia_ru">申请加入</string>
 </resources>
