修改了一个名字，123看起来有点诡异

--- a/Androidteam/res/values/strings.xml
+++ b/Androidteam/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">123</string>
+    <string name="app_name">竞赛管理信息系统byzhangww</string>
     
     <string name="network_unused">请检查网络</string>
     
